k8s-ingress-example/ingress-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: startit.com
      http:
        paths:
          - path: "/course(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: course-service
                port:
                  number: 80
          - path: "/blog(/|$)(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: blog-service
                port:
                  number: 80
